# prmsoe-fastapi

./: CLAUDE.md  README.md  app.py  main.py  pyproject.toml  test_endpoints.py
prmsoe-fast-api/: This is the Final Master Plan for your AI-Driven Market Validation Engine.md  pyproject.toml
prmsoe/prmsoe-fast-api/: app.py  pyproject.toml
prmsoe/prmsoe-fast-api/supabase/migrations/: 20260207000000_demo_seed.sql  20260207010000_demo_seed_bulk.sql
